# postgres-model-info-api

./: .env  Cargo.toml  README.md
migrations/2023-09-08-071843_create_ml_models/: up.sql
src/: main.rs  schema.rs
src/ml_models/: model.rs  routes.rs
