[package]
name = "rest_api_postgres"
version = "0.1.0"
edition = "2021"
authors = ["Viraj Shah <viraj.v.shah03@gmail.com>"]

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
chrono = {version= "0.4.30" , features = ["serde"]}
dotenv = "0.15.0"
diesel = {version = "2.1.1" , features=["postgres","r2d2","uuid","chrono"]}
diesel_migrations = "2.1.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
listenfd = "1.0.1"
serde = "1.0.188"
serde_json = "1.0.105"
r2d2 = "0.8.10"
uuid = {version = "1.4.1",features=["serde","v4"]}
